# ragged_memory

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
ram/: __init__.py  __main__.py  version.py
ram/cli/: __init__.py  app.py  common.py
ram/cli/commands/: __init__.py  add.py  demo.py  init.py
ram/indexing/: __init__.py  chunker.py  embedder.py  indexer.py
ram/models/: __init__.py  chunk.py
ram/storage/: __init__.py  config.py  context.py  manager.py  scope.py  store.py
specs/001-cli-scaffolding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-scaffolding/checklists/: requirements.md
specs/001-cli-scaffolding/contracts/: cli-interface.md
specs/002-storage-scopes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-storage-scopes/checklists/: requirements.md
specs/002-storage-scopes/contracts/: init-command.md  scope-flags.md
specs/003-file-indexing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-file-indexing/checklists/: requirements.md
specs/003-file-indexing/contracts/: add-command.md
