[project]
name = "ragged-memory"
version = "0.1.0"
description = "Semantic memory for LLMs at the command line"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
]

[project.scripts]
ram = "ram.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
