[project]
name = "ragged-memory"
version = "0.1.0"
description = "Semantic memory for LLMs at the command line"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "lancedb>=0.3.0",
    "chonkie>=0.1.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
ram = "ram.__main__:main"

[tool.setuptools.packages.find]
include = ["ram*"]
exclude = ["specs*", ".specify*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
